# spectuel-backend

./: .dockerignore  .env.example  .gitignore  conftest.py  pyproject.toml
.docker/: Dockerfile  prod-compose.yaml
.github/workflows/: build.yaml  test.yaml
docker/: MigrationDockerfile  dev-compose.yaml
frontend/: package-lock.json  package.json
frontend/src/: index.css
scripts/: migrate_db.sh
src/: .env.template  config.py  db_models.py  enums.py  event_handler.py  main.py  models.py  orderbook_duplicator.py  utils.py
src/alembic/: env.py
src/api/: app.py  dependencies.py  exc.py  types.py  typing.py
src/cli/: main.py
src/core/: enums.py  models.py
src/engine/: __init__.py  balance_manager.py  command_bus.py  commands.py  config.py  decorators.py  engine_orchestrator.py  engine_orchestrator_v2.py  enums.py  event_logger.py  execution_context.py  models.py  spot_engine.py  types.py  typing.py  utils.py
src/runners/: __init__.py  base.py  command.py  engine_heartbeat_runner.py  orderbook_snapshot_runner.py  server_runner.py
src/server/: app.py  exc.py  middleware.py  models.py  typing.py
src/services/: __init__.py  api_key_service.py  command_bus.py  email_service.py  jwt_service.py  kafka_service.py  order_service.py
src/utils/: db.py  redis.py  utils.py
tests/: config.py  conftest.py  test_orderbook_duplicator.py  utils.py
tests/engine/: utils.py
tests/loggers/: test_wal_logger.py
tests/restoration/: test_balance_manager_restorer.py  test_engine_restorer.py
tests/runners/: test_heartbeat_runner.py
tests/server/: conftest.py  (+1 more)
(+149 files in other folders)
