[project]
name="opti-trader"
version="0.0.0"
dependencies=[
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "faker>=37.5.3",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-benchmark>=5.1.0",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "sortedcontainers>=2.4.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
